Updated tests (added setup the django_session table to DB) andbump version to 0.0.4

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,11 +5,11 @@ python:
   - "2.7"
 
 env:
-  - DJANGO_VERSION=1.4
+  - DJANGO_VERSION=1.4.1
 
 # command to install dependencies
 install:
   - pip install -r requirements.txt --use-mirrors
 
 # command to run tests
-script: nosetests
+script: python multi_sessions/tests.py
