Added to ".travis.yml" pip-install with Django version

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,8 @@ env:
 
 # command to install dependencies
 install:
-  - pip install -r requirements.txt --use-mirrors
+  - pip install -q Django==$DJANGO_VERSION
+  - pip install -q -r requirements.txt --use-mirrors
 
 # command to run tests
 script: python multi_sessions/tests.py
